Add new icons and update asset references in main.dart and pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,15 @@ flutter:
   assets:
     - assets/icon-1.png
     - assets/icon-2.png
+    - assets/icon-3.png
+    - assets/icon-4.png
+    - assets/icon-5.png
+    - assets/icon-6.png
+    - assets/icon-7.png
+    - assets/icon-8.png
+    - assets/icon-9.png
+    - assets/icon-10.png
+    - assets/icon-11.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
