Add background images and update asset references in pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,10 @@ flutter:
     - assets/icon-9.png
     - assets/icon-10.png
     - assets/icon-11.png
+    - assets/background-image-1.png
+    - assets/background-image-2.png
+    - assets/background-image-3.png
+    - assets/background-image-4.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
